--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Documento 1</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Hello World</h1>
-    <input type="text" id="input" placeholder="Name" value="Pepito">
+    <label for="input">Edad</label>
+    <input type="text" id="input" placeholder="Ingresa tu edad">
     <button id="btn">Click me</button>
+    <span id="output"></span>
     <script src="app.js"></script>
 </body>
 </html>
